--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_card_swiper: ^7.0.0
+  photo_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
