Updated Home and photo card, aswell as add image provider dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_card_swiper: ^7.0.0
   photo_manager: ^3.3.0
+  photo_manager_image_provider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
