--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_card_swiper: ^7.0.0
   photo_manager: ^3.3.0
   photo_manager_image_provider: ^2.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
